# zhou_open_ptrack

calibration_toolkit/calibration_common/include/calibration_common/pinhole/: sensor.h
calibration_toolkit/calibration_common/src/calibration_common/algorithms/: automatic_checkerboard_finder.cpp
dh_bridge/: CMakeLists.txt  README.md  package.xml
dh_bridge/config/: parameters.yaml
dh_bridge/launch/: dh_bridge.launch
dh_bridge/launch/include/: dh_frames.launch
dh_bridge/src/: dh_bridge.cpp
hc_bridge/: CMakeLists.txt  README.md  package.xml
hc_bridge/launch/: hc_bridge.launch
hc_bridge/src/: hc_bridge.cpp
open_ptrack/detection/launch/: detection_node_dh_103.launch  detection_node_hc_101.launch  detection_node_kinect_102.launch
open_ptrack/opt_calibration/apps/: calibration_initializer.py  listener.py  status_plot.py
open_ptrack/opt_calibration/conf/: camera_network.yaml  camera_network_bk.yaml  debug.yaml
open_ptrack/opt_calibration/docs/: debug_code_flow_file.txt  debug_code_flow_file_save1.txt  debug_code_flow_file_save2.txt  debug_code_flow_file_save3.txt
open_ptrack/opt_calibration/include/open_ptrack/opt_calibration/: opt_calibration.h  ros_device.h  (+2 more)
open_ptrack/opt_calibration/launch/: calibration_initializer.launch  listener.launch  opt_calibration_master.launch  opt_define_reference_frame.launch  sensor_dh_103.launch  sensor_hc_101.launch  sensor_kinect_102.launch
open_ptrack/opt_calibration/src/: opt_calibration.cpp  opt_calibration_node.cpp  opt_checkerboard_extraction.cpp  ros_device.cpp
open_ptrack/opt_msgs/srv/: OPTSensor.srv
(+2 files in other folders)
